<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.itm.mobile.voto.equipe.EquipeCheckinActivity"
    tools:showIn="@layout/activity_equipe_checkin"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_equipe_checkin_municipio"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:hint="@string/lbl_equipe_checkin_municipio" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tv_equipe_checkin_zona_eleitoral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:enabled="true"
                    android:hint="@string/lbl_equipe_checkin_zona_eleitoral"
                    android:inputType="textAutoComplete"
                    android:lines="2" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_checkin_local_votacao"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:hint="@string/lbl_equipe_checkin_local_votacao" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_checkin_secao_eleitoral"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:digits="0123456789"
                    android:hint="@string/lbl_equipe_checkin_secao_eleitoral"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tv_checkin_horario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:enabled="true"
                    android:hint="@string/lbl_checkin_horario"
                    android:digits="0123456789"
                    android:inputType="time" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btn_checkin_retornar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="btn_checkin_retornar_click"
                    android:text="@string/lbl_btn_retornar" />

                <Button
                    android:id="@+id/btn_checkin_salvar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="btn_checkin_checkin_click"
                    android:text="@string/lbl_btn_checkin" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
