<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.itm.mobile.voto.equipe.EquipeTrocaActivity"
    tools:showIn="@layout/activity_equipe_troca"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_troca_secao_eleitoral"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:digits="0123456789"
                    android:hint="@string/lbl_equipe_troca_secao_eleitoral"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_troca_fiscal_anterior"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:digits="0123456789"
                    android:hint="@string/lbl_equipe_troca_fiscal_anterior"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_troca_fiscal_novo"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:digits="0123456789"
                    android:hint="@string/lbl_equipe_troca_fiscal_novo"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btn_troca_retornar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="btn_troca_retornar_click"
                    android:text="@string/lbl_btn_retornar" />

                <Button
                    android:id="@+id/btn_troca_trocar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="btn_troca_trocar_click"
                    android:text="@string/lbl_btn_trocar" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
